Fixed the logo on mobile devices and added a margin.

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ body {
 
 .cstm-logo {
     max-width: 30rem;
+    margin: 2rem;
 }
 
 .cstm-insta {
